<?xml version="1.0"?>
<package format="3">
  <name>ntrip</name>
  <version>0.1.0</version>
  <description>ROS 2 NTRIP client for VRS-based RTK correction</description>

  <maintainer email="your@email.com">YOUR_NAME</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>rtcm_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

